// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shareContextMenuExtensions should render a custom panel title when provided 1`] = `
<I18nProvider>
  <EuiContextMenuClass
    data-test-subj="shareContextMenu"
    initialPanelId={5}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 1,
          "title": "Get link",
        },
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            isEmbedded={true}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 2,
          "title": "Embed Code",
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
        Object {
          "id": 5,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Embedcode",
              "icon": "console",
              "name": "Embed code",
              "panel": 2,
            },
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "disabled": false,
              "icon": "link",
              "name": "Get links",
              "panel": 1,
            },
            Object {
              "data-test-subj": "sharePanel-ZZZpanel",
              "name": "ZZZ panel",
              "panel": 4,
            },
            Object {
              "data-test-subj": "sharePanel-AAApanel",
              "name": "AAA panel",
              "panel": 3,
            },
          ],
          "title": "Share this Custom object",
        },
      ]
    }
  />
</I18nProvider>
`;

exports[`shareContextMenuExtensions should sort ascending on sort order first and then ascending on name 1`] = `
<I18nProvider>
  <EuiContextMenuClass
    data-test-subj="shareContextMenu"
    initialPanelId={4}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 1,
          "title": "Get link",
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "disabled": false,
              "icon": "link",
              "name": "Get links",
              "panel": 1,
            },
            Object {
              "data-test-subj": "sharePanel-ZZZpanel",
              "name": "ZZZ panel",
              "panel": 3,
            },
            Object {
              "data-test-subj": "sharePanel-AAApanel",
              "name": "AAA panel",
              "panel": 2,
            },
          ],
          "title": "Share this dashboard",
        },
      ]
    }
  />
</I18nProvider>
`;

exports[`should disable the share URL when set 1`] = `
<I18nProvider>
  <EuiContextMenuClass
    data-test-subj="shareContextMenu"
    initialPanelId={3}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 1,
          "title": "Get link",
        },
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            isEmbedded={true}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 2,
          "title": "Embed Code",
        },
        Object {
          "id": 3,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Embedcode",
              "icon": "console",
              "name": "Embed code",
              "panel": 2,
            },
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "disabled": true,
              "icon": "link",
              "name": "Get links",
              "panel": 1,
            },
          ],
          "title": "Share this dashboard",
        },
      ]
    }
  />
</I18nProvider>
`;

exports[`should only render permalink panel when there are no other panels 1`] = `
<I18nProvider>
  <EuiContextMenuClass
    data-test-subj="shareContextMenu"
    initialPanelId={1}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 1,
          "title": "Get link",
        },
      ]
    }
  />
</I18nProvider>
`;

exports[`should render context menu panel when there are more than one panel 1`] = `
<I18nProvider>
  <EuiContextMenuClass
    data-test-subj="shareContextMenu"
    initialPanelId={3}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 1,
          "title": "Get link",
        },
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            isEmbedded={true}
            objectType="dashboard"
            urlService={Object {}}
          />,
          "id": 2,
          "title": "Embed Code",
        },
        Object {
          "id": 3,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Embedcode",
              "icon": "console",
              "name": "Embed code",
              "panel": 2,
            },
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "disabled": false,
              "icon": "link",
              "name": "Get links",
              "panel": 1,
            },
          ],
          "title": "Share this dashboard",
        },
      ]
    }
  />
</I18nProvider>
`;
